# telegram-bot-scripts

./: .gitignore  daily.py  notes.scpt  pyproject.toml  run_notes_script.sh
